--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
@@ -12,11 +13,11 @@
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "next": "14.2.15",
+    "next-auth": "5.0.0-beta.22",
+    "postcss": "8.4.38",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15",
-    "next-auth": "5.0.0-beta.19",
-    "postcss": "8.4.38",
     "tailwindcss": "3.4.4",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
@@ -26,6 +27,8 @@
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
     "typescript": "5.5.2"
   },
   "engines": {
